--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SUPABASE_URL=<YOUR API URL>
-NEXT_PUBLIC_SUPABASE_ANON_KEY=<YOUR ANON KEY>
+RESEND_API_KEY=<YOUR API KEY>
+RECIPIENT_EMAIL=<YOUR EMAIL>
